# sistema-inventarios

./: .gitignore  DEPLOY.md  Dockerfile  GEMINI.md  README.md  action_plan.md  default.db  docker-compose.yml  project_rules.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  session_log.md  setup.md
backend/: .env_example  gunicorn.conf.py  main.py  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: alerts.py  inventory.py  products.py  reports.py
backend/app/core/: cache.py  config.py  exceptions.py  logging_setup.py
backend/app/crud/: crud_alerta.py  crud_inventory.py  crud_product.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  alerta.py  lote.py  movimiento.py  producto.py
backend/app/schemas/: alerta.py  inventory.py  lote.py  movimiento.py  producto.py
backend/app/services/: alerts.py  reports.py
backend/tests/: __init__.py  conftest.py  test_db_setup.py  test_logging.py  test_main.py  test_models.py  test_reports.py  test_schemas.py  test_services.py
backend/tests/api/: test_alerts.py  test_inventory.py  test_products.py  test_reports_endpoints.py
frontend/: app.py  callbacks.py  dashboard.py  layouts.py  ui_config.py
frontend/callbacks_resources/: reports_fetch.py
frontend/tests/: conftest.py  test_callbacks.py
