[project]
name = "sistema-inventarios"
version = "0.1.0"
description = "API RESTful para un Sistema de Inventarios."
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "colorlog",
]

[project.optional-dependencies]
# Dependencias solo para desarrollo (pruebas)
dev = [
    "pytest",
    "httpx",
]