[project]
name = "sistema-inventarios"
version = "0.1.0"
description = "API RESTful para un Sistema de Inventarios."
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "colorlog",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "requests>=2.32.5",
    "pytest-mock>=3.15.1",
    "dash-table>=5.0.0",
]

[project.optional-dependencies]
# Dependencias solo para desarrollo (pruebas)
dev = [
    "pytest",
    "httpx",
]
